# led-pillar-zig

./: .gitignore  DONE.md  DSL_FEASIBILITY_FINDINGS.md  DSL_V1_LANGUAGE.md  ESP32_BYTECODE_RUNTIME_FINDINGS.md  ESP32_MATH_OPTIMIZATION_FINDINGS.md  FUTURE_IDEAS.md  ON_DEVICE_DSL_COMPILER.md  README.md  ROADMAP.md  SDF_EFFECT_IDEAS.md  SDF_FINDINGS.md  build.zig  build.zig.zon  eim_config.toml
.github/: copilot-instructions.md
esp32_firmware/: CMakeLists.txt  README.md  SHADER_PERFORMANCE.md  sdkconfig.defaults
esp32_firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  fw_audio_output.c  fw_audio_output.h  fw_bytecode_vm.c  fw_bytecode_vm.h  fw_fast_math.h  fw_led_config.c  fw_led_config.h  fw_led_output.c  fw_led_output.h  fw_native_shader.c  fw_native_shader.h  fw_tcp_server.c  fw_tcp_server.h  fw_telnet_server.c  fw_telnet_server.h  idf_component.yml  ota_hooks.c  ota_hooks.h
esp32_firmware/scripts/: shader_benchmark.py
examples/dsl/v1/: aurora-ribbons-classic.dsl  aurora.dsl  blank.dsl  chaos-nebula.dsl  dream-weaver.dsl  electric-arcs.dsl  heartbeat-pulse.dsl  math-benchmark.dsl  ocean-waves.dsl  primal-storm.dsl  rain-ripple.dsl  soap-bubbles.dsl  spiral-galaxy.dsl  starfield.dsl  tone-pulse.dsl
examples/dsl/v1/ambient/: dream-weaver.dsl  gradient.dsl  lava-lamp.dsl  soap-bubbles.dsl
examples/dsl/v1/geometric/: blink.dsl  (+1 more)
src/: build_shader_registry.zig  display_logic.zig  dsl_c_emitter.zig  dsl_parser.zig  dsl_runtime.zig  effects.zig  gen_registry_main.zig  main.zig  root.zig  sdf_common.zig  simulator.zig  simulator_main.zig  tcp_client.zig
(+5 files in other folders)
